--- a/css/main4.css
+++ b/css/main4.css
@@ -155,7 +155,7 @@ header nav  {
     transform: translate(5%);
 }
 .hero1--info {
-    background-color: #b9c0c5;
+    background-color: #dde2e4;
     padding-block: 40px;
     border: 10px solid #2d2b33;
 }
@@ -196,13 +196,4 @@ header nav  {
     font-size: 30px;
     font-weight: 20px;
     white-space: nowrap;
-}
-.hero2 hero1--info h3 {
-    background-color: #292929;
-    padding-top: 40px;
-    text-align: center;
-    font-size: 30px;
-    font-weight: 30px;
-    white-space: nowrap;
-    padding-block: 10px;
 }
