--- a/css/main5.css
+++ b/css/main5.css
@@ -90,55 +90,353 @@ header nav  {
 
 
 
-
-.hero00 {
-    width: 100%;
-    left: auto;
-    top: 200px;
-    position:absolute;
-    margin: 0 auto;
-
+.hero {
+padding-bottom: 100px;
+position:relative;
+z-index: 1;
+list-style-type: none;
 }
-.hero00--info h2 {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 600;
+.hero h10 {
+    font-size: 65px;
+    font-weight: 550;
     font-family: cursive;
+    padding-top: 120px;
     white-space: nowrap;
-
-}
-
-
-
-.hero1 {
-    width: 100%;
-    left: auto;
-    top: 550px;
-    position:absolute;
-    margin: 0 auto;
-
-}
-.hero1--info h2 {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 600;
-    font-family: cursive;
-    white-space: nowrap;
-
-}
-.hero1 li a {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 120px;
-    max-width: 400px;
-    border-radius: 7px;
-    background: #2d2b33;
-    color:#dee3e8;
-    padding:10px 165px;
-    font-size: 20px;
     text-align: center;
     white-space: nowrap;
+    padding-bottom: 100px;
+}
+.hero .Id_0 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    block-size: 350px;
     
+}
+.hero .Id_0 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #8975b9;
 
+}
+.hero .Id_0 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    max-width: 700px;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+
+.hero .Id_1 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    block-size: 350px;
+    
+}
+.hero .Id_1 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #458d73;
+
+}
+.hero .Id_1 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_2 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+    
+}
+.hero .Id_2 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #834638;
+
+}
+.hero .Id_2 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_3 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_3 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #647c62;
+
+}
+.hero .Id_3 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_4 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_4 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #4296a2;
+
+}
+.hero .Id_4 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_5 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_5 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #3856a0;
+
+}
+.hero .Id_5 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_6 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_6 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #a0579e;
+
+}
+.hero .Id_6 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_7 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_7 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #20222c;
+
+}
+.hero .Id_7 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_8 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_8 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #5a4734;
+
+}
+.hero .Id_8 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_9 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_9 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #d47132;
+
+}
+.hero .Id_9 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_10 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_10 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #9e9642;
+
+}
+.hero .Id_10 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_11 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+}
+.hero .Id_11 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #a6977e;
+
+}
+.hero .Id_11 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_12 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_12 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #c03c84;
+
+}
+.hero .Id_12 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_13 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_13 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #7b7b7b;
+
+}
+.hero .Id_13 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
+}
+.hero .Id_14 h1 {
+    display: block;
+    content: '';
+    background:#2d2b33;
+    border-radius: 15px;
+    
+}
+.hero .Id_14 img {
+    position: absolute;
+    transform: translate(5%, -105%);
+    max-width: 300px;
+    border-radius: 10px;
+    display: block;
+    border: 10px solid #d1d5e5;
+
+}
+.hero .Id_14 h2 {
+    border-radius: 15px;
+    color: #dee3e8;
+    transform: translate(400px, -325px);
+    font-size: 340%;
 }
