--- a/css/main.css
+++ b/css/main.css
@@ -92,13 +92,13 @@ header nav  {
 
 
 .hero {
-padding-bottom: 1000px;
+padding-bottom: 1700px;
 position:relative;
 z-index: 1;
 list-style-type: none;
 }
 .hero--info {
-    width: 1600px;;
+    width: 1300px;;
     padding-top: 10px;
 }
 
@@ -182,7 +182,7 @@ list-style-type: none;
     white-space: nowrap;
     text-align: center;
     white-space: nowrap;
-    
+    padding-bottom: 600px;
 
 }
 
@@ -250,4 +250,47 @@ list-style-type: none;
     height: auto;
     border-radius: 10px;
     border: 10px solid #2d2b33;
+}
+.hero00 .Id_2 img {
+    position: absolute;
+    top:4700px ;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    border: 10px solid #2d2b33;
+}
+
+.hero01 {
+    width: 100%;
+    left: auto;
+    top: 1750px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+.hero01--info h2 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: cursive;
+    white-space: nowrap;
+
+}
+.hero1 {
+    width: 100%;
+    left: auto;
+    top: 2000px;
+    position:absolute;
+    margin: 0 auto;
+
+}
+.hero1--info h2 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+    font-family: cursive;
+    white-space: nowrap;
+
 }
