--- a/css/main3.css
+++ b/css/main3.css
@@ -180,7 +180,18 @@ header nav  {
     margin: 0 auto;
     padding-bottom: 600px;
 }
-
+.hero14 {
+    width: 100%;
+    top: 2300px;
+    position:absolute;
+    margin: 0 auto;
+}
+.hero15 {
+    width: 100%;
+    top: 2300px;
+    position:absolute;
+    margin: 0 auto;
+}
 .hero00 {
     width: 100%;
     left: auto;
@@ -486,6 +497,50 @@ header nav  {
     position:absolute;
     top: 340px;
     left:25%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 98px;
+    font-size: 20px;
+    white-space: nowrap;
+    transform: translate(-50%);
+
+}
+.hero14 img {
+    position:absolute;
+    transform: translate(-50%);
+    left:50%;
+    max-width: 300px;
+    border-radius: 10px;
+    margin-left: auto;
+    border: 10px solid #2d2b33;
+}
+.Id_13 li a{
+    position:absolute;
+    top: 340px;
+    left:50%;
+    border-radius: 5px;
+    background: #2d2b33;
+    color:#dee3e8;
+    padding:10px 98px;
+    font-size: 20px;
+    white-space: nowrap;
+    transform: translate(-50%);
+
+}
+.hero15 img {
+    position:absolute;
+    transform: translate(-50%);
+    left:75%;
+    max-width: 300px;
+    border-radius: 10px;
+    margin-left: auto;
+    border: 10px solid #2d2b33;
+}
+.Id_14 li a{
+    position:absolute;
+    top: 340px;
+    left:75%;
     border-radius: 5px;
     background: #2d2b33;
     color:#dee3e8;
